# wxiv

./: .bumpversion.cfg  .clang-format  .gitignore  .gitmodules  CMakeCommon.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  build-all.sh  build-installer.bat  build-installer.sh  build.sh  clean.sh  format-code.bat  format-code.sh  run.sh  setup-vcpkg.bat  setup-vcpkg.sh  test-format.bat  test-format.sh  test.sh  unit-test.sh  vcpkg-configuration.json  vcpkg-maybe-later.txt  vcpkg.json
.github/workflows/: linux-build-and-test.yaml
doc/: LICENSE  clipboard.txt  design.txt  readme.txt  wxiv-help.txt  wxiv-release-notes.txt
icons/: appicon.rc  wxiv-icon-16.xpm  wxiv-icon-32.xpm  wxiv-icon.xcf  wxiv.icns
scripts/: make-mac-icns.sh  setup-build-machine-mac.sh  setup-build-machine.sh
src/: CMakeLists.txt  WxivMainFrame.cpp  WxivMainFrame.h
src/WxivLib/: CMakeLists.txt  WxivMainSplitWindow.cpp  WxivMainSplitWindow.h
src/WxivLib/ArrowUtil/: ArrowFilterExpression.cpp  ArrowFilterExpression.h  ArrowUtil.cpp  ArrowUtil.h
src/WxivLib/BaseUtil/: MathUtil.cpp  MathUtil.h  MiscUtil.cpp  MiscUtil.h  StringUtil.cpp  StringUtil.h  VectorUtil.cpp  VectorUtil.h
src/WxivLib/Dialog/: CollageSpecDialog.cpp  CollageSpecDialog.h
src/WxivLib/Dicom/: Contour.h  DicomUtil.cpp  DicomUtil.h
src/WxivLib/Image/: Polygon.cpp  Polygon.h  ShapeSet.cpp  ShapeSet.h  WxivImage.cpp  WxivImage.h  WxivImageUtil.cpp  WxivImageUtil.h
src/WxivLib/ImageList/: ImageListPanel.cpp  ImageListPanel.h  ImageListSource.cpp  ImageListSource.h  ImageListSourceDcmDirectory.cpp  ImageListSourceDcmDirectory.h  ImageListSourceDirectory.cpp  ImageListSourceDirectory.h
src/WxivLib/ImageView/: ImageScrollPanel.cpp  ImageScrollPanel.h  ImageViewPanel.cpp  ImageViewPanel.h  ImageViewPanelSettings.cpp  ImageViewPanelSettings.h  ImageViewPanelSettingsPanel.cpp  ImageViewPanelSettingsPanel.h  IntensityRangeParams.cpp  IntensityRangeParams.h  ManualScrollPanel.cpp  ManualScrollPanel.h
src/WxivLib/OpenCVUtil/: CollageSpec.h  FloatHist.cpp  FloatHist.h  ImageUtil.cpp  ImageUtil.h
src/WxivLib/Panel/: HistChartPanel.cpp  HistChartPanel.h  PixelStatsPanel.cpp  PixelStatsPanel.h  ProfilesPanel.cpp  ProfilesPanel.h  ShapeMetadataHistPanel.cpp  ShapeMetadataHistPanel.h  ShapeMetadataPanel.cpp  ShapeMetadataPanel.h
src/WxivLib/WxWidgetsUtil/: TextDisplayDialog.cpp  TextDisplayDialog.h  WxWidgetsUtil.cpp  WxWidgetsUtil.h  WxivUtil.cpp  WxivUtil.h
tests/: CMakeLists.txt  TempFile.h
tests/ArrowUtilTests/: ArrowUtilTests.cpp  FilterSpecTests.cpp
tests/BaseUtilTests/: StringUtilTests.cpp
tests/ImageTests/: ImageListSourceDirectoryTests.cpp  WxivImageTests.cpp
tests/OpenCVUtilTests/: ImageUtilTests.cpp
tests/WxWidgetsUtilTests/: WxWidgetsUtilTests.cpp  WxivUtilTests.cpp
tests/data/images/: colors-tif.tif
